--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -16,11 +16,14 @@
             <h3>Our Most Popular Campground Site</h3>
             <% campgrounds.forEach(function(campground) { %>
                 <div class="col-md-3 col-sm-6">
-                    <div class="thumbnail text-center" style="min-height:200px;height:200px;">
-                        <img class="img-thumbnail" src="<%= campground.image %>">
+                    <div class="thumbnail text-center" style="height:auto">
+                            <img class="img-thumbnail img-responsive" src="<%= campground.image %>">
                         <div class="caption">
                             <h4><%= campground.name %></h4>
                         </div>
+                        <p>
+                            <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
+                        </p>
                     </div>
                 </div>
             <% }); %>
