--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,11 +1,14 @@
-<% include partials/header %>
+<% include ../partials/header %>
 <p><%= campground.name %></p>
 <img src="<%= campground.image %>" />
 <p><%= campground.description %></p>
+<p>
+    <a class="btn btn-success" href="/campgrounds/<%= campground._id%>/comments/new">Go to Comment</a>
+</p>
 <% campground.comments.forEach(function(comment) { %>
     <p>
        <strong><%= comment.author%></strong> - <%= comment.text%>
     </p>
 <% });%>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
