--- a/views/campgrounds/campgrounds.ejs
+++ b/views/campgrounds/campgrounds.ejs
@@ -16,7 +16,7 @@
             <h3>Our Most Popular Campground Site</h3>
             <% campgrounds.forEach(function(campground) { %>
                 <div class="col-md-3 col-sm-6">
-                    <div class="thumbnail text-center" style="height:auto">
+                    <div class="thumbnail text-center">
                             <img class="img-thumbnail img-responsive" src="<%= campground.image %>">
                         <div class="caption">
                             <h4><%= campground.name %></h4>
