--- a/views/campgrounds/campgrounds.ejs
+++ b/views/campgrounds/campgrounds.ejs
@@ -15,7 +15,7 @@
         <div class="col-lg-12">
             <h3>Our Most Popular Campground Site</h3>
             <% campgrounds.forEach(function(campground) { %>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-sm-4 col-xs-6">
                     <div class="thumbnail text-center">
                             <img class="img-thumbnail img-responsive" src="<%= campground.image %>">
                         <div class="caption">
