--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -18,9 +18,9 @@
                     <p><%= campground.description %></p>
                     <p><strong><em>Submitted By <%= campground.author.username %></em></strong></p>
                     <% if(currentUser && campground.author.id.equals(currentUser._id)) { %>
-                    <a style="margin-right:7px" href="/campgrounds/<%= campground._id %>/edit" class="btn btn-warning pull-left">Edit</a>
+                    <a style="margin-right:7px" href="/campgrounds/<%= campground._id %>/edit" class="btn btn-warning pull-left btn-xs">Edit</a>
                     <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                        <button class="btn btn-danger">Delete</button>
+                        <button class="btn btn-danger btn-xs">Delete</button>
                     </form>
                     <% } %>
                 </div>
@@ -38,6 +38,13 @@
                             <p>
                                <%= comment.text%>
                             </p>
+                            <% if(currentUser && comment.author.id.equals(currentUser._id)) { %>
+                            <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
+                            
+                            <form id="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE" method="POST">
+                                <button class="btn btn-xs btn-danger">DELETE</button>
+                            </form>
+                            <% } %>
                         </div>
                     </div>
                 <% });%>
